package enums;

public enum ManagerType {
    OR,
    DEPARTMENT,
    FACULTY
}