package enums;

public enum SchoolType {
    FIT,
    BS,
    ISE,
    SAM,
    KMA
}