package enums;

public enum TeacherTitle {
    LECTURER,
    SENIOR_LECTURER,
    PROFESSOR
}