package management;

public interface Observer {
    void update(News news);
}